Fixed bug on mobile

--- a/assets/less/kibosh.less
+++ b/assets/less/kibosh.less
@@ -563,7 +563,7 @@ form.subscribe {
 		margin: 50px 0;
 		@media only screen and (max-width: 900px) {
 			input.email, .indicator:after {
-				font-size: 1em;
+				font-size: 0.9em;
 			}
 		}
 
